动作模块本地化框架适配完成

--- a/translation/CN.json
+++ b/translation/CN.json
@@ -152,38 +152,43 @@
         "轻声喘气_Desc_1": "{0}轻声喘着气.",
         "跺脚_Desc_0": "",
         "跺脚_Desc_1": "{0}跺了跺脚.",
-        "头蹭_Desc_0": "{0}把脑袋埋在{1}的怀里.",
+        "头蹭_Desc_0": "{0}用自己的脑袋蹭了蹭{1}的{2}.",
         "头蹭_Desc_1": "",
+        "脸蹭_Desc_0": "{0}用自己的脸颊蹭了蹭{1}的{2}.",
+        "脸蹭_Desc_1": "",
+        "鼻子蹭_Desc_0": "{0}用自己的鼻子蹭了蹭{1}的{2}.",
+        "鼻子蹭_Desc_1": "",
+        "埋怀里_Desc_0": "{0}把脑袋埋在{1}的怀里.",
+        "埋怀里_Desc_1": "",
 
-        "ItemAddon": "身体(附加)", 
-        "ItemArms": "手臂", 
-        "ItemBoots": "脚", 
+        "ItemAddon": "身体(附加)",
+        "ItemArms": "手臂",
+        "ItemBoots": "脚",
         "ItemBreast": "乳房",
-        "ItemButt": "屁股", 
-        "ItemDevices": "身体(装置)", 
-        "ItemEars": "耳朵", 
+        "ItemButt": "屁股",
+        "ItemDevices": "身体(装置)",
+        "ItemEars": "耳朵",
         "ItemFeet": "小腿",
-        "ItemHandheld": "手", 
-        "ItemHands": "手", 
-        "ItemHead": "头", 
-        "ItemHood": "头发", 
+        "ItemHandheld": "手",
+        "ItemHands": "手",
+        "ItemHead": "头",
+        "ItemHood": "头发",
         "ItemLegs": "大腿",
-        "ItemMisc": "身体(杂项)", 
-        "ItemMouth": "嘴巴", 
-        "ItemMouth2": "嘴巴", 
+        "ItemMisc": "身体(杂项)",
+        "ItemMouth": "嘴巴",
+        "ItemMouth2": "嘴巴",
         "ItemMouth3": "嘴巴",
-        "ItemNeck": "脖子", 
-        "ItemNeckAccessories": "脖子", 
-        "ItemNeckRestraints": "脖子", 
+        "ItemNeck": "脖子",
+        "ItemNeckAccessories": "脖子",
+        "ItemNeckRestraints": "脖子",
         "ItemNipples": "乳头",
-        "ItemNipplesPiercings": "乳头", 
-        "ItemNose": "鼻子", 
-        "ItemPelvis": "小腹", 
-        "ItemTorso": "肋部", 
+        "ItemNipplesPiercings": "乳头",
+        "ItemNose": "鼻子",
+        "ItemPelvis": "小腹",
+        "ItemTorso": "肋部",
         "ItemTorso2": "肋部",
-        "ItemVulva": "阴道", 
+        "ItemVulva": "阴道",
         "ItemVulvaPiercings": "阴蒂",
-
-        "XSAct_Tickle_Resist":"{target}紧闭双眼尽力抵抗着高潮，但被{source}的瘙痒干扰，从嘴巴里泄露出一声压抑的呻吟，不知是否还能忍住."
+        "XSAct_Tickle_Resist": "{target}紧闭双眼尽力抵抗着高潮，但被{source}的瘙痒干扰，从嘴巴里泄露出一声压抑的呻吟，不知是否还能忍住."
     }
 }
