ChatRoom模块本地化完成

--- a/translation/CN.json
+++ b/translation/CN.json
@@ -58,6 +58,7 @@
         "鼻子蹭": "鼻子蹭",
         "埋怀里": "埋怀里",
 
+        "~~动作占位符说明~~": "{0}是动作发出者的名字，{1}是动作接收者的名字，{2}是身体部位名称",
         "眯眼_Desc_0": "",
         "眯眼_Desc_1": "{0}眯了眯眼.",
         "眼神飘忽_Desc_0": "",
@@ -189,6 +190,7 @@
         "ItemTorso2": "肋部",
         "ItemVulva": "阴道",
         "ItemVulvaPiercings": "阴蒂",
+
         "XSAct_Tickle_Resist": "{target}紧闭双眼尽力抵抗着高潮，但被{source}的瘙痒干扰，从嘴巴里泄露出一声压抑的呻吟，不知是否还能忍住."
     }
 }
