修复`惊讶`的表情菜单的key的拼写错误导致的bug

--- a/translation/CN.json
+++ b/translation/CN.json
@@ -232,7 +232,7 @@
         "KaomojiTitle.sd": "伤心",
         "KaomojiTitle.sy": "害羞",
         "KaomojiTitle.ar": "生气",
-        "KaomojiTitle.ap": "惊讶",
+        "KaomojiTitle.sp": "惊讶",
         "KaomojiTitle.cf": "困惑",
         "KaomojiTitle.nt": "顽皮"
     },
