修改部分翻译

--- a/translation/EN.json
+++ b/translation/EN.json
@@ -171,7 +171,7 @@
         "ItemArms": "Arms",
         "ItemBoots": "Boots",
         "ItemBreast": "Breast",
-        "ItemButt": "Butt股",
+        "ItemButt": "Butt",
         "ItemDevices": "body(Devices)",
         "ItemEars": "Ears",
         "ItemFeet": "Feet",
