fixed EN a key spelling mistake.

--- a/translation/EN.json
+++ b/translation/EN.json
@@ -232,7 +232,7 @@
         "KaomojiTitle.sd": "sad",
         "KaomojiTitle.sy": "shy",
         "KaomojiTitle.ar": "angry",
-        "KaomojiTitle.ap": "surprise",
+        "KaomojiTitle.sp": "surprise",
         "KaomojiTitle.cf": "puzzled",
         "KaomojiTitle.nt": "funny"
     },
